prevents slider flickering on slide change

--- a/app/src/app/shared/components/slider/slide/slide.component.scss
+++ b/app/src/app/shared/components/slider/slide/slide.component.scss
@@ -6,7 +6,7 @@
 .img_self {
   display: block;
   width: 100%;
-  height: 100%;
+  max-height: 100%;
 }
 
 .overlay_view {
@@ -26,8 +26,11 @@
 }
 
 .item {
-  max-height: 20em;
+  height: 20em;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .img_container:hover .overlay_view {
